# flibcpp

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: CgvFindVersion.cmake  CheckSWIGFortran.cmake  FindSphinx.cmake  FlibUtils.cmake  FlibcppConfig.cmake.in  FlibcppVersion.cmake  UseSWIGFortran.cmake  flibcpp_version.cpp.in  git-version.txt
cmake/backport-cmake-318/: FindSWIG.cmake  UseSWIG.cmake
doc/: CMakeLists.txt  Makefile  acknowledgments.rst  conclusion.rst  conf.py  conventions.rst  examples.rst  index.rst  infrastructure.rst  interface.rst  introduction.rst  license.rst  modules.rst  references.rst  version.json.in
doc/_python/: monkeysphinx.py
doc/_static/: flibcpp-tm-header.tex  ornltm-style.sty  references.bib
doc/appendices/: interface.rst  license.rst
doc/modules/: algorithm.rst  chrono.rst  conclusion.rst  examples.rst  introduction.rst  map.rst  random.rst  set.rst  string.rst  vector.rst
example/: .gitignore  CMakeLists.txt  example_utils.f90  run-examples.sh  sort.f90  sort_generic.f90  vecstr.f90
include/: flc.i  flc_algorithm.i  flc_chrono.i  flc_map.i  flc_random.i  flc_set.i  flc_string.i  flc_vector.i  import_flc.i
scripts/: cmake_sputnik  cmake_vostok
scripts/travis/: before_install.sh  compile.sh  configure.sh  deploy.sh  install.sh  script.sh  test.sh
src/: flc.f90  flc.i  flcFORTRAN_wrap.cxx  flc_algorithm.f90  flc_algorithm.i  flc_algorithmFORTRAN_wrap.cxx  flc_chrono.i  flc_map.f90  flc_mapFORTRAN_wrap.cxx  flc_random.f90  flc_random.i  flc_randomFORTRAN_wrap.cxx  flc_set.f90  flc_setFORTRAN_wrap.cxx  flc_string.f90  flc_string.i  flc_stringFORTRAN_wrap.cxx  flc_vector.f90  flc_vector.i  flc_vectorFORTRAN_wrap.cxx  import_flc.i
test/: CMakeLists.txt  test_algorithm.F90  test_algorithm.f90  test_map.F90  test_random.F90  test_set.F90  test_string.F90  test_vector.F90
